--- a/C/BaekJoon/.vscode/settings.json
+++ b/C/BaekJoon/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "editor.fontFamily": "'D2Coding ligature', Consolas, 'Courier New', monospace",
+    "editor.fontLigatures": true
 }
